# manifest

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  manifest-compact.yml  manifest-ubuntu.yml
data/: library-api-labels.json
data/0.1/: library-api-hazards-0.1.json
demo-binary/: Cargo.toml  demo-binary
demo-binary/src/: main.rs
src/: app_label.rs  error.rs  lib.rs  sifis_api.rs
