[package]
name = "manifest"
version = "0.1.0"
description = """
Produces a manifest file from the hazards associated to the SIFIS-API
contained in a binary.
"""
repository = "https://github.com/sifis-home/manifest"
keywords = ["manifest", "binary"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "manifest"

[dependencies]
clap = { version = "^3.2", features = ["derive"] }
object = "0.29.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
